--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,6 +28,7 @@ h1, h2, h3{
 
 p, a{
     font-family: var(--parrafos);
+    text-decoration: none;
 }
 
 .ocultar{
@@ -225,10 +226,10 @@ p, a{
     display: flex;
     flex-direction: column;
     align-items:center;
-    padding: 5rem;
-    border-radius: .5rem;
+    padding: 7rem;
+    max-width: 446px; 
+    margin: 0 auto; 
 }
-
 .formulario-encabezado h2{
     font-size: 3rem;
     text-align: center;
@@ -239,20 +240,8 @@ p, a{
         font-size: 3rem;
     }
 }
-.input-encabezado{
-    margin-bottom: 1rem;
-    width: 100%;
-}
 
-.input-encabezado input{
-    width: 100%;
-    padding: 0 1.6rem;
-    height: 4.8rem;
-    border: 1px solid #f1f1f1;
-    border-radius: .5rem;
-    font-family: var(--parrafos);
-    outline: none;
-}
+
 
 /*seguros*/
 @media(min-width: 768px) {
